# workshop-tests-tdd

./: .pre-commit-config.yaml  README-EN.md  README.md
androidchallenge/: settings.gradle
androidchallenge/app/: build.gradle
androidchallenge/app/src/androidTest/java/com/workshop/android_challenge/: ExampleInstrumentedTest.kt
androidchallenge/app/src/main/: AndroidManifest.xml
androidchallenge/app/src/main/java/com/workshop/android_challenge/: Boleto.kt  MainActivity.kt  MethodValidator.kt
androidchallenge/app/src/main/res/values/: strings.xml
androidchallenge/app/src/test/java/com/workshop/android_challenge/: BoletoUnitTest.kt  ExampleUnitTest.kt  MethodValidatorTest.kt
androidchallenge/gradle/wrapper/: gradle-wrapper.properties
cppchallenge/: CMakeLists.txt  CMakePresets.json  README.md
cppchallenge/src/: Environment.cpp  Environment.hpp  FeatureToggle.cpp  FeatureToggle.hpp  main.cpp
cppchallenge/test/: Environment_test.cpp
javascriptchallenge/: package-lock.json  package.json  tsconfig.json
javascriptchallenge/src/: boleto.ts
javascriptchallenge/test/: jest.config.js
javascriptchallenge/test/src/: boleto.spec.ts  methodValidator.spec.ts
